<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">board</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_write">WriteActivity</string>
    <string name="title_write">글쓰기</string>    
    <string name="title_title">제목</string>
    <string name="title_userId">아이디</string>
    <string name="title_content">내용</string>    
    <string name="title_complte">완료</string>
    <string name="title_cancle">취소</string>
    <string name="title_close">창닫기</string>

</resources>